Fixed responsive layout issues for showing list of featured films.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -613,44 +613,44 @@ footer {
 
 .filmsContainer {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  padding: 6rem;
+  flex-direction: column;
+  padding: 5rem 3rem;
   background-color: white;
 }
 @media screen and (min-width: 768px) {
   .filmsContainer {
-    padding: 10rem 3rem;
+    padding: 5rem;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
   }
 }
 @media screen and (min-width: 992px) {
   .filmsContainer {
-    padding: 10rem 14rem;
+    padding: 5rem 12rem;
   }
 }
 @media screen and (min-width: 1200px) {
   .filmsContainer {
-    padding: 10rem 22rem;
+    padding: 5rem 8rem;
   }
 }
 
 .film {
-  width: 24rem;
-  padding: 4rem;
+  width: 20rem;
+  height: 30rem;
+  margin: 3rem auto;
 }
 @media screen and (min-width: 768px) {
   .film {
-    padding: 3rem;
+    margin: 5rem;
   }
 }
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 1200px) {
   .film {
-    padding: 2rem;
+    width: 25rem;
+    height: 37rem;
   }
-}
-.film img {
-  width: 100%;
 }
 .film h2 {
   letter-spacing: 0.1rem;
@@ -658,6 +658,11 @@ footer {
   font-style: normal;
   color: rgba(29, 29, 29, 0.7);
   font-size: 1.2rem;
+}
+
+.filmImage {
+  width: 100%;
+  height: 100%;
 }
 
 /*# sourceMappingURL=main.css.map */
